--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <title>CodeTyping</title>
 </head>
 <body>
-    <div class="timer" id="timer">0</div>
+    <div class="timer" id="timer"></div>
     <div class="container"> 
-        <div class="quote display" id="quoteDisplay">quote</div>
-        <textarea id="quoteInput" class="quote-input" autofocus>quote</textarea>
+        <div class="quote display" id="quoteDisplay"></div>
+        <textarea id="quoteInput" class="quote-input" autofocus>Press here to code</textarea>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <button class="btn" type="button"><i class="fa fa-home"></i></button>
+        <button class="btn" type="button" onclick="renderNewQuote()">–></button>
     </div>
 </body> 
