--- a/index.html
+++ b/index.html
@@ -1,22 +1,121 @@
-<DOCTYPE html> 
-<html lang="en"> 
-<head> 
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width-device.width, initial-scale-1.0"> 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <link rel="stylesheet" href="styles.css"> 
-    <script src="script.js" defer> </script> 
-    <title>CodeTyping</title>
-</head>
-<body>
-    <div class="timer" id="timer"></div>
-    <div class="container"> 
-        <div class="quote display" id="quoteDisplay"></div>
-        <textarea id="quoteInput" class="quote-input" autofocus>Press here to code</textarea>
+* {
+    box-sizing: border-box;
+}
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+body {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    min-height: 100vh;
+    margin:0;
+    background-color: #222222; 
+}
 
-        <button class="btn" type="button"><i class="fa fa-home"></i></button>
-        <button class="btn" type="button" onclick="renderNewQuote()">–></button>
-    </div>
-</body> 
+body { 
+    font-family: 'Courier'; 
+    font-size: 20px; 
+    color: grey; 
+    opacity: 0.5; 
+}
+
+.container { 
+    padding: 3rem; 
+    width: 700px; 
+    max-width: 90%;
+}
+
+.timer { 
+    position: absolute; 
+    font-size: 1.7rem;   
+    color: rgba(240, 248, 255, 0.466); 
+    padding-left: 3rem;
+}
+
+.quote-display { 
+    margin-bottom: 3rem; 
+    margin-top: 3rem; 
+    opacity: 0.1; 
+    color: white; 
+    margin-left: calc(1rem + 2px); 
+    margin-right: calc(1rem+2px);
+}
+
+.quote-input { 
+    background-color: transparent; 
+    margin-top: 5rem; 
+    margin-bottom: 5rem; 
+    border: 4px solid #222222; 
+    outline: none; 
+    width: 100%; 
+    height: 5rem; 
+    margin: auto; 
+    resize: none; 
+    padding: .5rem 1rem; 
+    font-size: 1rem; 
+    border-radius: .5rem; 
+    font-family: 'Cascade Mono', 'Courier'; 
+    font-size: 20px; 
+    color: #4ffc91f6;
+    opacity: 0.3; 
+    caret-color: #4ffc91f6; 
+}
+
+.quote-input focus { 
+    margin-top: 5rem; 
+    margin-bottom: 5rem; 
+    opacity: .8; 
+}
+
+@keyframes TransitioningBackground { 
+    0% { 
+        opacity: 0.3; 
+    }
+    20% { 
+        opacity: 0.5;
+    }
+    50% { 
+        opacity: 0.7; 
+    }
+    100% { 
+        opacity: 0.9;
+    }
+}
+
+.correct { 
+    color: white; 
+    animation: TransitionBackground 0.3s ease;
+    transition: 0.3s;
+}
+
+.incorrect{ 
+    color: red; 
+    padding-bottom: 0.2px;
+    border-width: thin;
+    border-bottom-style: solid; 
+    animation: TransitionBackground 0.1s ease;
+    transition: 0.2s;
+}
+
+.btn {
+    background-color: transparent; 
+    opacity: 0.9; 
+    border: none; 
+    color: white; 
+    padding: 12px 16px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    border-radius: 2px; 
+    margin: auto;
+
+    overflow: hidden; 
+  }
+  
+  /* Darker background on mouse-over */
+
+  .btn:hover {
+    animation-timing-function: ease-in;
+    background-color: #4ffc91f6;
+    animation: TransitioningBackground 0.6s ease;
+    transition: 0.6s;
+  }
+
