--- a/codeType.html
+++ b/codeType.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <link rel="stylesheet" href="styles.css"> 
     <script src="script-code.js" defer> </script> 
-    <title>CodeTyping</title>
+    <title>codeType</title>
 </head>
 <body>
     <div class="timer" id="timer"></div>
