--- a/QuoteTyper.html
+++ b/QuoteTyper.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width-device.width, initial-scale-1.0"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <link rel="stylesheet" href="styles.css"> 
-    <script src="QuoteTyperscript.js" defer> </script> 
+    <link rel="stylesheet" href="QuoteTyperStyle.css"> 
+    <script src="QuoteTyperScript.js" defer> </script> 
     <title>CodeTyping</title>
 </head>
 <body>
