--- a/other.html
+++ b/other.html
@@ -33,8 +33,8 @@
     <p class = "mode"><span class="blink">{Select your mode}</span></p>
   </div>
   <div class="buttons">
-    <button class="btn" type="button" onclick="index.html">[hackerType]</button>
-    <button class="btn" type="button" onclick="index.html">[quoteType]</button>
+    <button class="btn" type="button" onclick="location.href='codeType.html'">[hackerType]</button>
+    <button class="btn" type="button" onclick="location.href='quoteType.html'">[quoteType]</button>
   </div>
 </body>
 </html>
