small changes to selectMode

--- a/selectMode.html
+++ b/selectMode.html
@@ -33,8 +33,15 @@
     <p class = "mode"><span class="blink">{Select your mode}</span></p>
   </div>
   <div class="buttons">
-    <button class="btn" type="button" onclick="location.href='codeType.html'">[hackerType]</button>
-    <button class="btn" type="button" onclick="location.href='quoteType.html'">[quoteType]</button>
+    <button class="btn" id="cType" type="button" onclick="location.href='codeType.html'">[hackerType]</button>
+    <button class="btn" id="qType" type="button" onclick="location.href='quoteType.html'">[quoteType]</button>
+  </div>
+  <div class="acontainer">
+    <img src="arrow.png" alt="double-bigger-than-arrow" class="arrows">
+    <img src="arrow.png" alt="double-bigger-than-arrow" class="arrows">
+  </div>
+  <div class="intro">
+    <p class = "text-intro">Have some typing practice!</p>
   </div>
 </body>
 </html>
