--- a/selectMode.html
+++ b/selectMode.html
@@ -37,8 +37,8 @@
     <button class="btn" id="qType" type="button" onclick="location.href='quoteType.html'">[quoteType]</button>
   </div>
   <div class="acontainer">
-    <img src="arrow.png" alt="double-bigger-than-arrow" class="arrows">
-    <img src="arrow.png" alt="double-bigger-than-arrow" class="arrows">
+    <img src="arrow.gif" alt="double-bigger-than-arrow" class="arrows">
+    <img src="arrow.gif" alt="double-bigger-than-arrow" class="arrows" id="a">
   </div>
   <div class="intro">
     <p class = "text-intro">Have some typing practice!</p>
