--- a/codeType.html
+++ b/codeType.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width-device.width, initial-scale-1.0"> 
         <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
         <link rel="stylesheet" href="quoteTypeStyle.css"> 
-        <script src="quoteTypeScript.js" defer> </script> 
-        <title>quoteTyping</title>
+        <script src="codeTypeScript.js" defer> </script> 
+        <title>codeType</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
@@ -14,7 +14,7 @@
     <body>
         <div class="headerThing">
             <h1><key class="material-symbols-outlined">keyboard</key>hackerType</h1>
-        </div>
+          </div>
         <div class="timer" id="timer"></div>
         <div class="container"> 
             <textarea id="quoteInput" class="quote-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus>Type here to start!</textarea>
