--- a/pageMain.html
+++ b/pageMain.html
@@ -53,7 +53,7 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script> 
     var typed = new Typed(".auto-type", {
-      strings: ["Pascal", "LOLCODE", "LISP", "Lua", "B", "Python", "GolfScript", "HolyC", "COBOL", "Fortran", "Java","C++"],
+      strings: ["Pascal", "LOLCODE", "LISP", "Lua", "Carbon?!", "Python", "PHP", "HolyC", "COBOL", "Fortran", "Java", "JavaScript", "TypeScript", "GoLang"],
       typeSpeed: 150,
       backSpeed: 170,
       backDelay: 1000,
